confluence/kubernetes/confluence-statfulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: confluence
  namespace: ci
  labels:
    app: confluence
spec:
  selector:
    matchLabels:
      app: confluence
  serviceName: confluence
  replicas: 1
  #minReadySeconds: 60     #滚动升级时60s后认为该pod就绪
  template:
    metadata:
      labels:
        app: confluence
    spec:
      terminationGracePeriodSeconds: 60 ##k8s将会给应用发送SIGTERM信号，可以用来正确、优雅地关闭应用,默认为30秒
      #从私有仓库下载镜像
      #imagePullSecrets:
      #- name: registrykey-ali-ext
      #securityContext:
      containers:
      - name: confluence
        image: slpcat/confluence:7.13.3
        imagePullPolicy: Always
        livenessProbe: #kubernetes认为该pod是存活的,不存活则需要重启
          httpGet:
            path: /
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 60 # equals to the maximum startup time of the application + couple of seconds
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe: #kubernetes认为该pod是启动成功的
          httpGet:
            path: /
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 30 # equals to minimum startup time of the application
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        resources:
          # keep request = limit to keep this container in guaranteed class
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 8000m
            memory: 16Gi
        ports:
          - name: web
            containerPort: 8090
        volumeMounts:
          - name: confluence-data
            mountPath: "/var/atlassian/confluence"
  volumeClaimTemplates:
  - metadata:
      name: confluence-data
    spec:
      accessModes:
      - ReadWriteOnce
      #ceph rbd storageclass
      #storageClassName: rbd
      resources:
        requests:
          storage: 80Gi
