confluence/kubernetes/confluence-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: confluence-svc
  namespace: ci
spec:
  ports:
  - name: http  
    protocol: TCP
    port: 80
    targetPort: 8090
  type: ClusterIP
  selector:
    app: confluence
