confluence/kubernetes/confluence-ingress2.yml
#kubernetes v1.22+
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  confluence-ingress
  namespace: ci
spec:
  ingressClassName: nginx-vpc
  rules:
  - host: confluence-dev.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: confluence-svc
            port:
              number: 80
